// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addIntoWatch no signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch no signed order fillable 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`addIntoWatch no signed order fillable 3`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`addIntoWatch with signed order fillable 1`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch with signed order fillable 2`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`addIntoWatch with signed order non fillable 1`] = `
Array [
  Array [
    Object {
      "amount": 0,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`addIntoWatch with signed order non fillable 2`] = `
Array [
  Array [
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`addIntoWatch with signed order non fillable 3`] = `
Object {
  "orderHash": Object {
    "exchangeAddress": "exchangeAddress",
    "expirationTimeSeconds": "1234567890",
    "feeRecipientAddress": "feeRecipientAddress",
    "makerAddress": "makerAddress",
    "makerAssetAmount": "123",
    "makerAssetData": "makerAssetData",
    "makerFee": "0",
    "salt": "789",
    "senderAddress": "senderAddress",
    "signature": "signature",
    "takerAddress": "takerAddress",
    "takerAssetAmount": "456",
    "takerAssetData": "takerAssetData",
    "takerFee": "0",
  },
}
`;

exports[`handle orderUpdate add 1`] = `
Array [
  Array [
    "orderHash",
    Object {
      "exchangeAddress": "exchangeAddress",
      "expirationTimeSeconds": "1234567890",
      "feeRecipientAddress": "feeRecipientAddress",
      "makerAddress": "makerAddress",
      "makerAssetAmount": "123",
      "makerAssetData": "makerAssetData",
      "makerFee": "0",
      "salt": "789",
      "senderAddress": "senderAddress",
      "signature": "signature",
      "takerAddress": "takerAddress",
      "takerAssetAmount": "456",
      "takerAssetData": "takerAssetData",
      "takerFee": "0",
    },
  ],
]
`;

exports[`handle orderUpdate terminate 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`handleOrderWatcherUpdate inValid ExchangeContractErrs.OrderCancelExpired 1`] = `Array []`;

exports[`handleOrderWatcherUpdate inValid ExchangeContractErrs.OrderCancelExpired 2`] = `
Array [
  Array [
    Object {
      "amount": -1,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate inValid ExchangeContractErrs.OrderCancelled 1`] = `Array []`;

exports[`handleOrderWatcherUpdate inValid ExchangeContractErrs.OrderCancelled 2`] = `
Array [
  Array [
    Object {
      "amount": -1,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate inValid ExchangeContractErrs.OrderFillExpired 1`] = `Array []`;

exports[`handleOrderWatcherUpdate inValid ExchangeContractErrs.OrderFillExpired 2`] = `
Array [
  Array [
    Object {
      "amount": -1,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate inValid ExchangeContractErrs.OrderRemainingFillAmountZero 1`] = `Array []`;

exports[`handleOrderWatcherUpdate inValid ExchangeContractErrs.OrderRemainingFillAmountZero 2`] = `
Array [
  Array [
    Object {
      "amount": 0,
      "method": "terminate",
      "orderHash": "orderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate inValid default 1`] = `Array []`;

exports[`handleOrderWatcherUpdate isValid 1`] = `
Array [
  Array [
    Object {
      "amount": 5.67e-16,
      "method": "update",
      "orderHash": "orderHash",
      "pair": "pair",
    },
  ],
]
`;

exports[`handleOrderWatcherUpdate isValid 2`] = `Array []`;

exports[`handleOrderWatcherUpdate isValid userOrder 1`] = `
Array [
  Array [
    Object {
      "amount": -1,
      "method": "method",
      "orderHash": "0xOrderHash",
      "pair": "pair",
    },
    false,
  ],
]
`;

exports[`remove from watch, exisitng order 1`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;

exports[`updateOrder isValid no userOrder 1`] = `
Array [
  Array [
    Object {
      "amount": -1,
      "method": "method",
      "orderHash": "orderHash",
      "pair": "pair",
    },
    false,
  ],
]
`;

exports[`updateOrder isValid no userOrder 2`] = `
Array [
  Array [
    "orderHash",
  ],
]
`;
